<?xml version="1.0"?>
<package format="2">
  <name>boost_sml</name>
  <version>0.1.2</version>
  <description>State machine library with ros logging</description>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>

  <url>https://boost-experimental.github.io/sml/</url>
  <author>boost-experimental (https://github.com/boost-experimental)</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/boost_sml</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/boost_sml/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/boost_sml/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>boost</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
